--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,4 @@
+<HeadLayout />
 <EmberLoadRemover />
 {{page-title
   (concat
@@ -12,4 +13,4 @@
     />
   {{/if}}
   {{outlet}}
-</AuApp> 
+</AuApp>
