--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,7 +32,7 @@
 
 // ADMIN UNIT - Styling specific to administrative units
 @import "project/admin-unit/essen";
-@import "project/admin-unit/gent";
+//@import "project/admin-unit/gent";
 
 // PLUGINS
 @import "ember-rdfa-editor";
