--- a/app/templates/inbox.hbs
+++ b/app/templates/inbox.hbs
@@ -40,6 +40,12 @@
                 {{t "inbox.menu.trash"}}
               </AuNavigationLink>
             </li>
+            <li class="au-c-list-navigation__item">
+              <AuNavigationLink @route="inbox.upload">
+                <AuIcon @icon="upload" @alignment="left" />
+                Upload CSS
+              </AuNavigationLink>
+            </li>
           </ul>
         </nav>
       </div>
