--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -71,6 +71,40 @@
     @widgets={{this.widgets}}
     @nodeViews={{this.nodeViews}}
     @plugins={{this.plugins}}
-  />
+  >
+    <:sidebar-collapsible>
+        <ArticleStructurePlugin::ArticleStructureCard 
+          @controller={{this.controller}}
+          @options={{this.config.structures}}
+        />
+        <CitationPlugin::CitationInsert 
+          @controller={{this.controller}} 
+          @plugin={{this.citationPlugin}}
+          @config={{this.config.citation}}
+        />
+        <RdfaDatePlugin::Insert 
+          @controller={{this.controller}}
+          @options={{this.config.date}}
+        />
+        <RoadsignRegulationPlugin::RoadsignRegulationCard @controller={{this.controller}}/>
+        <StandardTemplatePlugin::Card @controller={{this.controller}}/>
+    </:sidebar-collapsible>
+    <:sidebar>
+      <ArticleStructurePlugin::StructureCard 
+        @controller={{this.controller}} 
+        @options={{this.config.structures}}
+      />
+      <BesluitPlugin::BesluitPluginCard @controller={{this.controller}}/>
+      <CitationPlugin::CitationCard 
+        @controller={{this.controller}} 
+        @plugin={{this.citationPlugin}}
+      />
+      <ImportSnippetPlugin::Card @controller={{this.controller}}/>
+      <RdfaDatePlugin::Card 
+        @controller={{this.controller}}
+        @options={{this.config.date}}/>
+      <VariablePlugin::TemplateVariableCard @controller={{this.controller}}/>
+    </:sidebar>
+  </RdfaEditorContainer>
 </div>
 <ConfirmRouteLeave @enabled={{this.dirty}} @message={{t "behandeling-van-agendapunten.confirm-leave-without-saving"}}/>
