--- a/app/components/participation-list.hbs
+++ b/app/components/participation-list.hbs
@@ -1,5 +1,5 @@
 
-<div class="au-c-meeting-chrome-card au-u-margin-bottom-none">
+<div class="au-c-meeting-chrome-card au-u-margin-bottom-none" {{did-insert (perform this.fetchData)}}>
   <AuHeading @level="4" @skin="6" class="au-c-meeting-chrome-card__title">{{t "participation-list.block-title"}}</AuHeading>
   <ul class="au-c-list-divider">
     <li class="au-c-list-divider__item">
@@ -11,7 +11,7 @@
       {{/unless}}
     </li>
     <li class="au-c-list-divider__item">
-      {{t "participation-list.secretaris-label"}} <strong>{{this.secretary.isBestuurlijkeAliasVan.fullName}}</strong>
+      {{t "participation-list.secretaris-label"}} <strong></strong>
       {{#unless this.secretary}}
         <AuPill @skin="warning" @icon="alert-triangle" @iconAlignment="left">
           {{t "participation-list.secretaris-error"}}
