make table of contents work

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -62,7 +62,8 @@
                 <Tb.Spacer/>
                 <Tb.Group>
                   <BesluitTypePlugin::ToolbarDropdown @controller={{this.controller}}/>
-                  <Plugins::RdfaBlockRender::RdfaBlocksToggle @controller={{this.controller}}/>
+                  {{yield to="toolbar"}}
+                  <Plugins::RdfaBlockRender::RdfaBlocksToggle @controller={{this.editor}}/>
                 </Tb.Group>
               </Toolbar>
             {{/if}}
