--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -65,6 +65,9 @@
     @nodeViews={{this.nodeViews}}
     @plugins={{this.plugins}}
   >
+    <:toolbar>
+      <TableOfContentsPlugin::ToolbarButton @controller={{this.controller}}/>
+    </:toolbar>
     <:sidebar-collapsible>
       <ArticleStructurePlugin::ArticleStructureCard 
         @controller={{this.controller}}
