Move besluit type to only agendapoint

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -72,6 +72,9 @@
     @nodeViews={{this.nodeViews}}
     @plugins={{this.plugins}}
   >
+    <:toolbar>
+      <BesluitTypePlugin::ToolbarDropdown @controller={{this.controller}}/>
+    </:toolbar>
     <:sidebar-collapsible>
         <ArticleStructurePlugin::ArticleStructureCard 
           @controller={{this.controller}}
