--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -106,6 +106,7 @@
       <RdfaDatePlugin::Card 
         @controller={{this.controller}}
         @options={{this.config.date}}/>
+      <VariablePlugin::TemplateVariableCard @controller={{this.controller}}/>
     </:sidebar>
   </RdfaEditorContainer>
 </div>
