fix zitting text document container and improved sidebar collapsible menu

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -77,10 +77,12 @@
           <:aside>
             {{#if this.controller}}
               <Sidebar as |Sidebar|>
+                {{#if (has-block 'sidebar-collapsible')}}
                   <Sidebar.Collapsible @title='Insert'>
                     {{yield to='sidebar-collapsible'}}
                   </Sidebar.Collapsible>
-                  {{yield to='sidebar'}}
+                {{/if}}
+                {{yield to='sidebar'}}
               </Sidebar>
             {{/if}}
           </:aside>
