update editor to 3.3, need some ui fixes

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -62,7 +62,8 @@
                 <Tb.Spacer/>
                 <Tb.Group>
                   {{yield to="toolbar"}}
-                  <Plugins::RdfaBlockRender::RdfaBlocksToggle @controller={{this.editor}}/>
+                  <Plugins::Formatting::FormattingToggle @controller={{this.controller}}/>
+                  <Plugins::RdfaBlockRender::RdfaBlocksToggle @controller={{this.controller}}/>
                 </Tb.Group>
               </Toolbar>
             {{/if}}
