--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -160,7 +160,7 @@
         <Group>
           <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timeline-step.publish-button-label" name=@name}}</AuHeading>
           <AuPill @skin={{if @publishedResource "success"}} class="au-u-margin-left">
-            {{if @publishedResource "Publiek" "Niet publiek"}}
+            {{if @publishedResource (t "publish.public") (t "publish.non-public")}}
           </AuPill>
         </Group>
       </AuToolbar>
