update regulatory-statement plugin components to new editor API

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -91,6 +91,7 @@
         />
         <RoadsignRegulationPlugin::RoadsignRegulationCard @controller={{this.controller}}/>
         <StandardTemplatePlugin::Card @controller={{this.controller}}/>
+        <EditorPlugins::RegulatoryStatements::SidebarInsert @controller={{this.controller}}/>
     </:sidebar-collapsible>
     <:sidebar>
       <ArticleStructurePlugin::StructureCard 
