--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -91,7 +91,9 @@
         />
         <RoadsignRegulationPlugin::RoadsignRegulationCard @controller={{this.controller}}/>
         <StandardTemplatePlugin::Card @controller={{this.controller}}/>
-        <EditorPlugins::RegulatoryStatements::SidebarInsert @controller={{this.controller}}/>
+        {{#if (feature-flag 'regulatoryStatements')}}
+          <EditorPlugins::RegulatoryStatements::SidebarInsert @controller={{this.controller}}/>
+        {{/if}}
     </:sidebar-collapsible>
     <:sidebar>
       <ArticleStructurePlugin::StructureCard 
