--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -695,3 +695,25 @@ div[typeof="besluit:Zitting"] {
   }
 }
 
+.signature-warning {
+  position: relative;
+  border: 1px solid var(--au-red-400);
+  background-color: var(--au-red-300);
+  padding: 10px;
+  padding-left: 35px;
+  margin-top: 10px;
+  max-width: 400px;
+}
+
+.signature-warning-icon {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: var(--au-red-600);
+}
+
+.signature-warning-close-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
