--- a/app/components/publication-signatures.hbs
+++ b/app/components/publication-signatures.hbs
@@ -7,7 +7,7 @@
   </Group>
 </AuToolbar>
 <div class="au-o-grid au-u-margin-top-none au-u-margin-bottom-large">
-  {{#if (eq this.activeSignatures.length 2)}}
+  {{#if (eq this.signaturesCount 2)}}
     {{#each this.activeSignatures as |signature index|}}
       {{#if (eq index 0)}}
         <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
@@ -21,7 +21,7 @@
         </div>
       {{/if}}
     {{/each}}
-  {{else if (eq this.activeSignatures.length 1)}}
+  {{else if (eq this.signaturesCount 1)}}
     <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
       <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
       <Signatures::SignedResource @signature={{this.activeSignatures.firstObject}} @canDelete={{true}}/>
