--- a/app/components/signatures/signed-resource.hbs
+++ b/app/components/signatures/signed-resource.hbs
@@ -4,7 +4,7 @@
     <AuPill
       @skin="error"
     >
-      Deleted
+      {{t "publish.deleted"}}
     </AuPill>
   {{else}}
     <AuHelpText @size="large" @skin="secondary" class="au-u-margin-top-none">
