--- a/app/templates/meetings/publish/publication-actions/detail.hbs
+++ b/app/templates/meetings/publish/publication-actions/detail.hbs
@@ -4,5 +4,5 @@
   {{t 'publication-actions.return'}}
 </AuLink>
 <div class="publication-actions-detail-container">
-  {{{this.model}}}
+  {{html-safe this.model}}
 </div>
