disable linting for inline styles

--- a/app/components/signatures/signed-resource.hbs
+++ b/app/components/signatures/signed-resource.hbs
@@ -38,6 +38,7 @@
         />
       </div>
       {{t "publish.delete-signature-warning"}}
+      {{! template-lint-disable }}
       <AuButton
         {{on "click" this.deleteSignature}}
         @skin="secondary"
