converted to ember resources (sorry forgot to push this)

--- a/app/components/publishing-log-hash.hbs
+++ b/app/components/publishing-log-hash.hbs
@@ -1,7 +1,7 @@
-<span {{did-insert (perform this.loadData)}}>
-  {{#if this.hash}}
+<span>
+  {{#if this.hash.value}}
     <AuPill>
-      {{this.hash}}
+      {{this.hash.value}}
     </AuPill>
   {{/if}}
 </span>
