--- a/app/components/publishing-log-document-name.hbs
+++ b/app/components/publishing-log-document-name.hbs
@@ -1,11 +1,11 @@
-<span {{did-insert (perform this.loadData)}}>
-  {{#if this.deleted}}
+<span>
+  {{#if this.data.value.deleted}}
     <AuLink @route="meetings.publish.publication-actions.detail" @model={{@log.id}}>
-      {{this.documentName}} {{#if this.deleted}}( {{t "publication-actions.deleted"}} ){{/if}}
+      {{this.data.value.documentName}} {{#if this.data.value.deleted}}( {{t "publication-actions.deleted"}} ){{/if}}
     </AuLink>
   {{else}}
-    <AuLink @route={{this.route}}>
-      {{this.documentName}}
+    <AuLink @route={{this.data.value.route}}>
+      {{this.data.value.documentName}}
     </AuLink>
   {{/if}}
 </span>
