replace status pill in edit screen with linked agendapoints

--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -31,7 +31,7 @@
       <div>
         {{#unless @editorDocument.isNew}}
           {{#if @isRegulatoryStatement}}
-            <RegulatoryStatementStatusPill @container={{@documentContainer}} />
+            <LinkedAgendapointsButton @document={{@documentContainer}}/>
           {{else}}
             <EditorStatusPill @status={{this.documentStatus}} />
           {{/if}}
